--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
          alt="Virtu DigiLab Logo" class="logo" />
     <h1>Daftar Alat Laboratorium</h1>
   </header>
+  
+  <div class="controls">
+  <input type="text" id="searchInput" placeholder="Cari Serial / Nama Alat / Lokasi..." />
+
+  <select id="locationFilter">
+    <option value="">Filter Location (Semua)</option>
+  </select>
+</div>
 
   <main>
     <div class="table-container">
