--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
   </header>
   
   <div class="controls">
-  <input type="text" id="searchInput" placeholder="Cari Serial / Nama Alat / Lokasi..." />
+  <input type="text" id="searchInput" placeholder="Search...." />
 
   <select id="locationFilter">
-    <option value="">Filter Location (Semua)</option>
+    <option value="">All Location</option>
   </select>
 </div>
 
