--- a/detail.html
+++ b/detail.html
@@ -27,7 +27,43 @@
       text-align: center;
       font-weight: bold;
     }
-  </style>
+
+    /* ==================================
+       DETAIL TABLE (TABEL INFORMASI ALAT)
+    =================================== */
+    .detail-table {
+      width: 100%;
+      border-collapse: collapse;
+      background: white;
+      margin-top: 20px;
+      border-radius: 10px;
+      overflow: hidden;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+    }
+
+    .detail-table th,
+    .detail-table td {
+      border: 1px solid #e2e8f0;
+      padding: 10px 14px;
+      font-size: 14px;
+    }
+
+    .detail-table th {
+      background: #f1f5f9;
+      width: 220px;
+      font-weight: 600;
+    }
+
+    .qr-box {
+      text-align: center;
+      padding: 20px;
+    }
+
+    #qrcode {
+      margin-top: 10px;
+    }
+</style>
+
 </head>
 
 <body>
