--- a/index.html
+++ b/index.html
@@ -1,54 +1,80 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Daftar Alat Laboratorium | Virtu DigiLab</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Virtu DigiLab | Location</title>
+  <link rel="stylesheet" href="style.css">
+
   <style>
-    .logo { height: 60px; margin-right: 10px; }
-    header { display: flex; align-items: center; gap: 15px; padding: 15px; }
-    .qr-box { width: 90px; height: 90px; margin: auto; }
-    .controls { display: flex; gap: 10px; padding: 15px; }
-    .controls input, .controls select { padding: 8px; font-size: 14px; }
-    .table-container { padding: 15px; }
-    table { width: 100%; border-collapse: collapse; }
-    th, td { padding: 10px; border: 1px solid #ccc; text-align: left; }
-    th { background: #f0f0f0; }
-    .loading { text-align: center; }
-    footer { padding: 20px; text-align: center; color: #666; margin-top: 20px; }
+    body {
+      font-family: 'Segoe UI', Arial, sans-serif;
+      background: #f3f4f6;
+      margin: 0;
+      padding: 20px;
+    }
+
+    h1 {
+      text-align: center;
+      margin-bottom: 25px;
+      color: #111827;
+    }
+
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+      gap: 20px;
+      padding: 10px;
+    }
+
+    .card {
+      background: white;
+      border-radius: 14px;
+      padding: 25px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+      text-align: center;
+      cursor: pointer;
+      transition: 0.25s;
+      border: 1px solid #e5e7eb;
+    }
+
+    .card:hover {
+      transform: scale(1.04);
+      box-shadow: 0 6px 18px rgba(0,0,0,0.12);
+    }
+
+    .card h2 {
+      font-size: 22px;
+      margin: 0;
+      color: #111827;
+    }
   </style>
 </head>
-<body>
-  <header>
-    <img src="https://raw.githack.com/nurfaputra22/virtudigilab_equipment_web/main/logo_virtu.png" alt="Virtu DigiLab Logo" class="logo" />
-    <h1>Daftar Alat Laboratorium</h1>
-  </header>
 
-  <div class="controls">
-    <input type="text" id="searchInput" placeholder="Search...." />
-    <select id="locationFilter">
-      <option value="">All Location</option>
-    </select>
+<body>
+
+  <h1>Pilih Lokasi</h1>
+
+  <div class="grid">
+    <!-- Lokasi 1 -->
+    <div class="card" onclick="goToLocation('22A3')">
+      <h2>22A3</h2>
+    </div>
+    
+    <!-- Lokasi 2 -->
+    <div class="card" onclick="goToLocation('27A6')">
+      <h2>27A6</h2>
+    </div>
   </div>
 
-  <main>
-    <div class="table-container">
-      <table id="assetTable">
-        <thead>
-          <tr>
-            <th>No</th>
-            <th>Serial Number</th>
-            <th>Asset Description</th>
-            <th>Location</th>
-            <th>QR Code</th>
-          </tr>
-        </thead>
-        <tbody id="assetGrid">
-          <tr><td colspan="5" class="loading">Memuat data...</td></tr>
-        </tbody>
-      </table>
-    </div>
+  <script>
+    function goToLocation(location) {
+      window.location.href = "list.html?location=" + location;
+    }
+  </script>
+
+</body>
+
   </main>
 
   <footer>
