--- a/index.html
+++ b/index.html
@@ -1,4 +1,31 @@
 <!DOCTYPE html>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Daftar Alat Laboratorium | Virtu DigiLab</title>
+
+  <link rel="stylesheet" href="style.css" />
+
+  <style>
+    .logo {
+      height: 60px;
+      margin-right: 10px;
+    }
+
+    header {
+      display: flex;
+      align-items: center;
+      gap: 15px;
+      padding: 15px;
+    }
+
+    .qr-box {
+      width: 90px;
+      height: 90px;
+      margin: auto;
+    }
+  </style>
+
+</head>
 <html lang="id">
 <head>
   <meta charset="UTF-8">
