--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <header>
     <img src="https://raw.githack.com/nurfaputra22/virtudigilab_equipment_web/main/logo_virtu.png"
          alt="Virtu DigiLab Logo" class="logo" />
-    <h1>Daftar Alat Laboratorium</h1>
+    <h1>Daftar Laboratorium</h1>
   </header>
 <head>
   <meta charset="UTF-8">
@@ -88,8 +88,6 @@
 </head>
 
 <body>
-
-  <h1>Pilih Lokasi</h1>
 
   <div class="grid">
     <!-- Lokasi 1 -->
