--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="id">
-<html lang="id">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -97,6 +96,12 @@
     
     <!-- Lokasi 2 -->
     <div class="card" onclick="goToLocation('27A6')">
+      <h2>27A6</h2>
+    </div>
+  </div>
+
+      <!-- Lokasi 3 -->
+    <div class="card" onclick="goToLocation('26A2')">
       <h2>27A6</h2>
     </div>
   </div>
