--- a/detail.html
+++ b/detail.html
@@ -101,7 +101,10 @@
       <table class="detail-table">
         <tbody id="detail-body">
           <!-- BARIS-BARIS DARI script.js AKAN MASUK DI SINI -->
-
+              <div class="qr-section">
+          <h3>QR Code</h3>
+            <div id="qrcode"></div>
+              </div>
           <!-- QR Code row tetap di bawah -->
           <tr>
             <th>QR Code</th>
