--- a/detail.html
+++ b/detail.html
@@ -96,23 +96,24 @@
 
   <main>
 
-    <h2 class="section-title">Informasi Alat</h2>
-    <div class="detail-card">
-      <table class="detail-table">
-        <tbody id="detail-body">
-          <!-- BARIS-BARIS DARI script.js AKAN MASUK DI SINI -->
-          <!-- QR Code row tetap di bawah -->
-          <tr>
-            <th>QR Code</th>
-            <td>
-              <div class="qr-section">
-                <div id="qrcode"></div>
-              </div>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
+<h2 class="section-title">Informasi Alat</h2>
+
+<div class="detail-card">
+
+  <!-- Tabel Informasi -->
+  <table class="detail-table">
+    <tbody id="detail-body">
+      <!-- script.js akan mengisi baris-barisnya -->
+    </tbody>
+  </table>
+
+  <!-- QR Code Paling Bawah -->
+  <div class="qr-box">
+    <h3>QR Code</h3>
+    <div id="qrcode"></div>
+  </div>
+
+</div>
 
     <h2 class="section-title">Log Maintenance</h2>
     <div id="log-maintenance">Memuat...</div>
