--- a/detail.html
+++ b/detail.html
@@ -38,7 +38,7 @@
       background: #e2e8f0;
       padding: 12px;
       font-weight: 600;
-      width: 220px;
+      width: 320px !important;   /* geser lebih kiri */
       border-bottom: 1px solid #cbd5e1;
       text-align: left;
     }
